correction z-index sur footer

--- a/ohmyfood/css/style.css
+++ b/ohmyfood/css/style.css
@@ -239,6 +239,7 @@ flex space-between pour positionner les 2 éléments qu'il contient */
   width: 480px;
   position: fixed;
   bottom: 0;
+  z-index: 10;
 }
 @media all and (max-width: 480px) {
   .footer {
